# gl-thread-dev-board

./: CMakeLists.txt  Kconfig  README.md  guide_to_use.md  prj.conf
.github/workflows/: build.yml  release.yml
boards/: gl_nrf52840_dev_board.overlay  nrf52-bindings.h
boards/arm/gl_thread_dev_board/: Kconfig.board  Kconfig.defconfig  gl_thread_dev_board.dts  gl_thread_dev_board.yaml  gl_thread_dev_board_defconfig
drivers/: nrf52-bindings.h
drivers/hx3203/zephyr/: CMakeLists.txt  Kconfig  hx3203.c  hx3203.h
drivers/spl0601/zephyr/: CMakeLists.txt  Kconfig  spl0601.c  spl0601.h
dts/bindings/sensor/: goertek,spl0601.yaml  tianyihexin,hx3203.yaml
src/: gl_button_logic.c  gl_button_logic.h  gl_coap.c  gl_coap.h  gl_types.h  main.c
src/components/battery/: gl_battery.c  gl_battery.h
src/components/cjson/: gl_cjson_utils.c  gl_cjson_utils.h
src/components/coap/: gl_coap_utils.c  gl_coap_utils.h
src/components/gpio/: gl_gpio.c  gl_gpio.h
src/components/led/: gl_led.c  gl_led.h
src/components/led_strip/: gl_led_strip.c  gl_led_strip.h
src/components/ot/: gl_ot_api.c  gl_ot_api.h
src/components/qdec/: gl_qdec.c  gl_qdec.h
src/components/sensor/: gl_sensor.c  gl_sensor.h
src/components/smp/: gl_smp_udp.c  gl_smp_udp.h
src/components/srp/: gl_srp_utils.c  gl_srp_utils.h
uart_dfu/: README.md  UART_DFU.md
